@@ -847,6 +847,8 @@ public abstract class ApiServiceImpl implements ApiService {
                 FavouritePackageResponse favouritePackageResponse = packageService.getFavouritePackage(proposalRef, userId);
                 legDocuments.sort(Comparator.comparing(LegDocument::getLastModificationInstant).reversed());
                 DocumentVO proposalVO = this.createViewObject(documents, proposalXmlContent, favouritePackageResponse.isFavourite());
+                proposalVO.setPkgLastUpdatedOn(leosPackage.getUpdatedOn());
+                proposalVO.setPkgLastUpdatedBy(userHelper.convertToPresentation(leosPackage.getUpdatedBy()));
                 proposalVO.getMetadata().setDocumentCollectionName(proposal.getMetadata().get().getDocumentCollectionName());
                 proposalVO.setCreationOptions(documents.stream().filter(doc -> doc.getCategory().name().equals("PROPOSAL")).findFirst().get().getMetadata().get().getCreationOptions());
                 List<LinkedPackage> linkedPackageList = packageService.findLinkedPackagesByPackageId(leosPackage.getId());
@@ -1035,35 +1037,7 @@ public abstract class ApiServiceImpl implements ApiService {
                 legalText.addChildDocument(annexVO);
             }
         }
-        setLastUpdateOnAndBy(documents, proposalVO);
         return proposalVO;
-    }
-
-    // this method checks the last updateOn and lastUpdateBy of all child documents and sets it in the proposal
-    // it fixes the issue #2609
-    private void setLastUpdateOnAndBy(List<XmlDocument> documents, DocumentVO proposalVO) {
-        if (documents == null || documents.isEmpty() || proposalVO == null) {
-            return;
-        }
-        Date lastUpdatedOn = null;
-        String lastUpdatedBy = null;
-
-        for (XmlDocument document : documents) {
-            if(document.getLastModificationInstant() != null) {
-                Date updatedOn = Date.from(document.getLastModificationInstant());
-                if (lastUpdatedOn == null || updatedOn.after(lastUpdatedOn)) {
-                    lastUpdatedOn = updatedOn;
-                    lastUpdatedBy = document.getLastModifiedBy();
-                }
-            }
-        }
-        if(StringUtils.isNotBlank(lastUpdatedBy)) {
-            proposalVO.setPkgLastUpdatedOn(lastUpdatedOn);
-            proposalVO.setPkgLastUpdatedBy(userHelper.convertToPresentation(lastUpdatedBy));
-        } else {
-            proposalVO.setPkgLastUpdatedOn(proposalVO.getUpdatedOn());
-            proposalVO.setPkgLastUpdatedBy(proposalVO.getUpdatedBy());
-        }
     }
 
     private DocumentVO createFinancialStatementVO(FinancialStatement financialStatement) {
@@ -1164,7 +1138,7 @@ public abstract class ApiServiceImpl implements ApiService {
     }
 
     private List<Annex> getAnnexes(LeosPackage leosPackage) {
-        return packageService.findDocumentsByPackagePath(leosPackage.getPath(), Annex.class, false);
+        return leosPackage != null ? packageService.findDocumentsByPackagePath(leosPackage.getPath(), Annex.class, true) : null;
     }
 
     private List<FinancialStatement> getFinancialStatements(LeosPackage leosPackage) {
@@ -1234,15 +1208,15 @@ public abstract class ApiServiceImpl implements ApiService {
         Validate.notNull(clonedLegName, "Cloned leg file name should not be null");
         LeosPackage clonedPackage = packageService.findPackageByDocumentRef(clonedProposalRef, Proposal.class);
         LegDocument clonedLegDocument = legService.findLastContribution(clonedPackage.getPath(), clonedLegName);
+        List<XmlDocument> clonedDocuments = packageService.findDocumentsByPackagePath(clonedPackage.getPath(), XmlDocument.class, true);
         boolean contributionChanged = false;
         if (clonedLegDocument != null && originalLegDocument != null) {
             try {
                 Map<String, Object> contributionFiles = MilestoneHelper.getMilestoneFiles(clonedLegDocument);
                 Map<String, Object> originalDocumentFiles = MilestoneHelper.getMilestoneFiles(originalLegDocument);
 
-                Map<String, Object> docsAddedMap = MilestoneHelper.populateDocsAddedMap(contributionFiles, originalDocumentFiles, clonedLegDocument,
-                        getAnnexes(originalLeosPackage),
-                        xmlContentProcessor);
+                Map<String, Object> docsAddedMap = MilestoneHelper.populateDocsAddedMap(clonedDocuments, originalDocumentFiles, clonedLegDocument,
+                        getAnnexes(originalLeosPackage));
                 List<String> docsAddedList = docsAddedMap.keySet().stream().filter((n) ->
                     !n.contains(PROCESSED) && !n.contains(ACCEPTED_ADDED)
                 ).collect(Collectors.toList());
@@ -1250,7 +1224,7 @@ public abstract class ApiServiceImpl implements ApiService {
                     contributionChanged = true;
                 }
                 Map<String, Object> docsDeletedMap = MilestoneHelper.populateDocsDeletedMap(originalDocumentFiles,
-                            contributionFiles, originalLegDocument, getAnnexes(originalLeosPackage), xmlContentProcessor);
+                            contributionFiles, originalLegDocument, getAnnexes(originalLeosPackage));
                 List<String> docsDeletedList = docsDeletedMap.keySet().stream().filter((n) ->
                         !n.contains(PROCESSED) && !n.contains(ACCEPTED_DELETED)).collect(Collectors.toList());
                 if (docsDeletedList.size() > 0) {
@@ -1748,7 +1722,7 @@ public abstract class ApiServiceImpl implements ApiService {
 
     private MilestoneViewResponse doListMilestoneDocumentsFromClonedProposal(LegDocument clonedLegDoc, Proposal clonedProposal, String clonedProposalRef) throws Exception {
         populateCloneProposalMetadataVO(clonedProposal);
-        Proposal originalProposal = proposalService.findProposal(this.cloneContext.getCloneProposalMetadataVO().getClonedFromObjectId(), false);
+        Proposal originalProposal = proposalService.findProposalByRef(removeVersion(clonedProposal.getClonedFrom()));
         LeosPackage originalPackage = packageService.findPackageByDocumentRef(originalProposal.getMetadata().get().getRef(), Proposal.class);
         LegDocument legDocument =  this.legService.findLastLegByVersionedReference(originalPackage.getPath(), originalProposal.getVersionedReference());
         return listMilestoneDocuments(legDocument, clonedLegDoc, clonedProposalRef, true);
@@ -1774,6 +1748,7 @@ public abstract class ApiServiceImpl implements ApiService {
         boolean isContributionChanged = false;
         Map<String, Object> annexAddedMap = new HashMap<>();
         LeosPackage originalPackage = packageService.findPackageByDocumentRef(legDocument.getName().replace(".leg",""), LegDocument.class);
+        LeosPackage clonedPackage = clonedLegDoc != null ? packageService.findPackageByDocumentRef(clonedLegDoc.getName().replace(".leg",""), LegDocument.class) : null;
 
         if (isToBeCompared) {
             try {
@@ -1781,9 +1756,9 @@ public abstract class ApiServiceImpl implements ApiService {
                 Map<String, Object> clonedContentFiles = MilestoneHelper.filterAndSortFiles(contributionFiles, HTML);
                 Map<String, String> docVersionOriginalMap = versionAndAnnexNumberMap.get("docVersionMap");
                 Map<String, Integer> annexKeyOriginalMap = versionAndAnnexNumberMap.get("annexKeyMap");
-                annexAddedMap = MilestoneHelper.populateAnnexAddedMap(contributionFiles, clonedLegDoc, getAnnexes(originalPackage), xmlContentProcessor);
-                Map<String, Object> annexDeletedMap = MilestoneHelper.populateAnnexDeletedMap(unzippedFiles,
-                        contributionFiles, legDocument, getAnnexes(originalPackage), xmlContentProcessor);
+                annexAddedMap = MilestoneHelper.populateAnnexAddedMap(getAnnexes(clonedPackage), clonedLegDoc, getAnnexes(originalPackage));
+                Map<String, Object> annexDeletedMap = MilestoneHelper.populateAnnexDeletedMap(unzippedFiles ,getAnnexes(clonedPackage)
+                        , legDocument, getAnnexes(originalPackage));
                 try {
                     isContributionChanged = identifyContributionChanges(clonedProposalRef, originalPackage, legDocument, clonedLegDoc.getName());
                 } catch (Exception e) {
@@ -1922,7 +1897,10 @@ public abstract class ApiServiceImpl implements ApiService {
                                 Proposal clonedProposal = this.proposalService.findProposalByRef(clonedProposalRef);
                                 populateCloneProposalMetadataVO(clonedProposal);
                                 List<FinancialStatement> fs = getFinancialStatements(originalPackage);
-                                if (!fs.isEmpty() && !fs.get(0).getMetadata().get().getRef().equals(cloneContext.getCloneProposalMetadataVO().getClonedFromRef())) {
+                                List<FinancialStatement> clonedFs = getFinancialStatements(clonedPackage);
+
+                                if (!fs.isEmpty() && !(clonedFs != null && clonedFS.isPresent() && clonedFs.getFirst().getClonedFrom()
+                                        .equals(fs.getFirst().getMetadata().get().getRef()))) {
                                     milestoneView.setContentStatus("Accepted_Added");
                                 } else if (fs.isEmpty()) {
                                     milestoneView.setContentStatus("Added");
@@ -2026,6 +2004,10 @@ public abstract class ApiServiceImpl implements ApiService {
     private void populateCloneProposalMetadataVO(Proposal proposal) {
         CloneProposalMetadataVO cloneProposalMetadataVO = proposalService.getClonedProposalMetadata(proposal);
         cloneContext.setCloneProposalMetadataVO(cloneProposalMetadataVO);
+    }
+
+    private String removeVersion(String input) {
+        return StringUtils.isNotEmpty(input) ? input.replaceFirst("_\\d+(\\.\\d+)+$", "") : input;
     }
 
     @Override
